Added Snorlax Hat

--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -220,6 +220,8 @@ item.broque_monsieur_head.name=Broque Monsieur's Kopf
 
 item.bandana.name=Kopftuch
 
+//item.snorlax_hat.name=<newline>
+
 item.top_hat.name=Zylinderhut
 
 item.ralsei_hat.name=Ralsei's Hut
