--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -220,6 +220,8 @@ item.super_crown.name=uʍoɹƆ ɹǝdnS
 
 item.bandana.name=ɐuɐpuɐᗺ
 
+//item.snorlax_hat.name=<newline>
+
 //item.top_hat.name=<newline>
 
 item.ralsei_hat.name=ʇɐH s,ᴉǝslɐᴚ
