--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -220,6 +220,8 @@ item.broque_monsieur_head.name=Broque Monsieur's Head
 
 item.bandana.name=Bandana
 
+item.snorlax_hat.name=Snorlax Hat
+
 item.top_hat.name=Top Hat
 
 item.ralsei_hat.name=Ralsei's Hat
