--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -220,6 +220,8 @@ item.broque_monsieur_head.name=Cabeza de Broque Monsieur
 
 item.bandana.name=Pañuelo
 
+//item.snorlax_hat.name=<newline>
+
 item.top_hat.name=Sombrero de copa
 
 item.ralsei_hat.name=Sombrero de Ralsei
