--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -220,6 +220,8 @@ item.super_crown.name=couraune bien supair coule.
 
 item.bandana.name=banade
 
+//item.snorlax_hat.name=<newline>
+
 //item.top_hat.name=<newline>
 
 item.ralsei_hat.name=chapo de ralsi
