--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -220,6 +220,8 @@ item.broque_monsieur_head.name=Tête de Charlie Bloc
 
 item.bandana.name=Bandana
 
+//item.snorlax_hat.name=<newline>
+
 item.top_hat.name=Haut-de-forme
 
 item.ralsei_hat.name=Chapeau de Ralsei
