--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -220,6 +220,8 @@ item.broque_monsieur_head.name=HELPEEEZ MOIIII SIVOULPAI
 
 item.bandana.name=banana
 
+//item.snorlax_hat.name=<newline>
+
 item.top_hat.name=topattopat
 
 item.ralsei_hat.name=ralzi at
