--- a/resources/assets/mubble/lang/zh_tw.lang
+++ b/resources/assets/mubble/lang/zh_tw.lang
@@ -220,6 +220,8 @@ item.super_crown.name=超級王冠
 
 item.bandana.name=手帕
 
+//item.snorlax_hat.name=<newline>
+
 //item.top_hat.name=<newline>
 
 //item.ralsei_hat.name=<newline>
