--- a/resources/assets/mubble/lang/en_gb.lang
+++ b/resources/assets/mubble/lang/en_gb.lang
@@ -220,6 +220,8 @@ item.super_crown.name=Super Crown
 
 item.bandana.name=Bandana
 
+//item.snorlax_hat.name=<newline>
+
 //item.top_hat.name=<newline>
 
 item.ralsei_hat.name=Ralsei's Hat
