--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -220,6 +220,8 @@ item.broque_monsieur_head.name=Broque Monsieur's hoofd
 
 item.bandana.name=Bandana
 
+//item.snorlax_hat.name=<newline>
+
 item.top_hat.name=Hoge hoed
 
 item.ralsei_hat.name=Ralsei's hoed
