--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -1,51 +1,51 @@
 --- CREATIVE TABS ---
-itemGroup.mubble_blocks=Mubble cubes
-itemGroup.mubble_items=Mubble toys
-itemGroup.mubble_costumes=Mubble put things on you
+itemGroup.mubble_blocks=Mubble cubes thingyz
+itemGroup.mubble_items=Mubble toyz
+itemGroup.mubble_costumes=Mubble put things on you for no reazon lol
 
 --- BLOCKS ---
 tile.vanadium_block.name=shiny purple cube
 tile.vanadium_ore.name=shiny purple in blox
 tile.red_bricks.name=bloo brik
-//tile.red_brick_stairs.name=<newline>
+tile.red_brick_stairs.name=bloo birk sters
 tile.white_bricks.name=cool brik
-//tile.white_brick_stairs.name=<newline>
+tile.white_brick_stairs.name=cool brik sters
 tile.blunite.name=moon-a-bloc
-//tile.blunite_stairs.name=<newline>
-//tile.blunite_wall.name=<newline>
+tile.blunite_stairs.name=a ster
+tile.blunite_wall.name=a woll
 tile.polished_blunite.name=pretteh monnbloc
-//tile.polished_blunite_stairs.name=<newline>
+tile.polished_blunite_stairs.name=pretteh monnbloc sters
 tile.carbonite.name=blac stoneh
-//tile.carbonite_stairs.name=<newline>
-//tile.carbonite_wall.name=<newline>
+tile.carbonite_stairs.name=blac sters
+tile.carbonite_wall.name=blac woll
 tile.polished_carbonite.name=pretteh blac ston
-//tile.polished_carbonite_stairs.name=<newline>
-tile.footblock.name=futbloc
-//tile.white_cloud_block.name=<newline>
-//tile.light_gray_cloud_block.name=<newline>
-//tile.gray_cloud_block.name=<newline>
-//tile.black_cloud_block.name=<newline>
-//tile.tomato.name=<newline>
-//tile.salad.name=<newline>
-//tile.cheese_block.name=<newline>
-//tile.unstable_stone.name=<newline>
-//tile.ultimatum_portal.name=<newline>
-//tile.blue_balloon.name=<newline>
-//tile.light_blue_balloon.name=<newline>
-//tile.cyan_balloon.name=<newline>
-//tile.green_balloon.name=<newline>
-//tile.lime_balloon.name=<newline>
-//tile.yellow_balloon.name=<newline>
-//tile.orange_balloon.name=<newline>
-//tile.red_balloon.name=<newline>
-//tile.pink_balloon.name=<newline>
-//tile.magenta_balloon.name=<newline>
-//tile.purple_balloon.name=<newline>
-//tile.brown_balloon.name=<newline>
-//tile.white_balloon.name=<newline>
-//tile.light_gray_balloon.name=<newline>
-//tile.gray_balloon.name=<newline>
-//tile.black_balloon.name=<newline>
+tile.polished_carbonite_stairs.name=pretteh blac sters
+tile.footblock.name=SOCCEEEbloc
+tile.white_cloud_block.name=woah itz white
+tile.light_gray_cloud_block.name=woah itz less white
+tile.gray_cloud_block.name=woah itz lesser white
+tile.black_cloud_block.name=woah itz 0% white
+tile.tomato.name=redd fud
+tile.salad.name=green fud
+tile.cheese_block.name=cheezy bloc
+tile.unstable_stone.name=crac ston
+tile.ultimatum_portal.name=woah it iz en unusod porteel item
+tile.blue_balloon.name=bloo beloon
+tile.light_blue_balloon.name=legit bloo beloon
+tile.cyan_balloon.name=super cyan beloon
+tile.green_balloon.name=gren beloon
+tile.lime_balloon.name=not lemun beloon
+tile.yellow_balloon.name=lemun beloon
+tile.orange_balloon.name=oreng beloon
+tile.red_balloon.name=redd beloon
+tile.pink_balloon.name=pinky beloon
+tile.magenta_balloon.name=megente beloon
+tile.purple_balloon.name=burple beloon
+tile.brown_balloon.name=poopie beloon
+tile.white_balloon.name=wot beloon
+tile.light_gray_balloon.name=less wot beloon
+tile.gray_balloon.name=lesser wot beloon
+tile.black_balloon.name=not even wot beloon
 
 tile.question_block.name=BLOC ???? BLOOOOOC ?????????????
 tile.empty_block.name=GBJ
@@ -60,34 +60,34 @@ tile.ice_flower.name=ice flow
 tile.boomerang_flower.name=triangle ting flow
 tile.cloud_flower.name=clown flow
 tile.gold_flower.name=gol flow
-//tile.blue_mushroom.name=<newline>
-//tile.light_blue_mushroom.name=<newline>
-//tile.cyan_mushroom.name=<newline>
-//tile.green_mushroom.name=<newline>
-//tile.lime_mushroom.name=<newline>
-//tile.yellow_mushroom.name=<newline>
-//tile.orange_mushroom.name=<newline>
-//tile.pink_mushroom.name=<newline>
-//tile.magenta_mushroom.name=<newline>
-//tile.purple_mushroom.name=<newline>
-//tile.white_mushroom.name=<newline>
-//tile.light_gray_mushroom.name=<newline>
-//tile.gray_mushroom.name=<newline>
-//tile.black_mushroom.name=<newline>
-//tile.blue_mushroom_block.name=<newline>
-//tile.light_blue_mushroom_block.name=<newline>
-//tile.cyan_mushroom_block.name=<newline>
-//tile.green_mushroom_block.name=<newline>
-//tile.lime_mushroom_block.name=<newline>
-//tile.yellow_mushroom_block.name=<newline>
-//tile.orange_mushroom_block.name=<newline>
-//tile.pink_mushroom_block.name=<newline>
-//tile.magenta_mushroom_block.name=<newline>
-//tile.purple_mushroom_block.name=<newline>
-//tile.white_mushroom_block.name=<newline>
-//tile.light_gray_mushroom_block.name=<newline>
-//tile.gray_mushroom_block.name=<newline>
-//tile.black_mushroom_block.name=<newline>
+tile.blue_mushroom.name=bloosroom
+tile.light_blue_mushroom.name=legit bloosroom
+tile.cyan_mushroom.name=super cyansroom
+tile.green_mushroom.name=grensroom
+tile.lime_mushroom.name=not lemun mesroom
+tile.yellow_mushroom.name=lemun mesroom
+tile.orange_mushroom.name=oreng mesroom
+tile.pink_mushroom.name=pinkysroom
+tile.magenta_mushroom.name=megentesroom
+tile.purple_mushroom.name=burple mesroom
+tile.white_mushroom.name=should i kep doin the wot jokesroom
+tile.light_gray_mushroom.name=i stopped the less wot jokesroom
+tile.gray_mushroom.name=also the lesser wot jokesroom
+tile.black_mushroom.name=this is a normal sroom not a 0% wot jokesroom
+tile.blue_mushroom_block.name=bloo blocroom
+tile.light_blue_mushroom_block.name=legit blocroom
+tile.cyan_mushroom_block.name=super cyan blocroom
+tile.green_mushroom_block.name=gren blocroom
+tile.lime_mushroom_block.name=not a lemun blocroom
+tile.yellow_mushroom_block.name=lemun blocroom
+tile.orange_mushroom_block.name=oreng blocroom
+tile.pink_mushroom_block.name=pinky blocroom
+tile.magenta_mushroom_block.name=megente blocroom
+tile.purple_mushroom_block.name=burple blocroom
+tile.white_mushroom_block.name=wot blocroom
+tile.light_gray_mushroom_block.name=legit greey blocroom
+tile.gray_mushroom_block.name=greey blocroom
+tile.black_mushroom_block.name=blac blocroom
 
 //tile.blue_tetris_block.name=<newline>
 //tile.light_blue_tetris_block.name=<newline>
@@ -113,7 +113,7 @@ tile.monochrome_tetris_scaffolding.name=blak & wite tetri zcffolding
 tile.vampire_stone.name=spooky ston
 tile.medusa_stone.name=the stone in the room with the sp0ky girl with snakes on her head
 tile.medusa_bricks.name=the bricks in the room with the sp00ky girl with snakes on her head
-//tile.medusa_brick_stairs.name=<newline>
+tile.medusa_brick_stairs.name=the sterz in the room with the sp0ky girl with snakes on her head
 tile.blue_candy_cane_pillar.name=blue big christmas cane
 //tile.light_blue_candy_cane_pillar.name=<newline>
 //tile.cyan_candy_cane_pillar.name=<newline>
@@ -131,40 +131,40 @@ tile.purple_candy_cane_pillar.name=purpl big christmas cane
 //tile.gray_candy_cane_pillar.name=<newline>
 //tile.black_candy_cane_pillar.name=<newline>
 
-//tile.green_hill_grass_block.name=<newline>
-//tile.green_hill_dirt.name=<newline>
-//tile.marble_zone_stone.name=<newline>
-//tile.yellow_studiopolis_clapper.name=<newline>
-//tile.blue_studiopolis_clapper.name=<newline>
-//tile.spring.name=<newline>
+tile.green_hill_grass_block.name=FEEST gress bloc
+tile.green_hill_dirt.name=FEEST dit
+tile.marble_zone_stone.name=FEEST merbl
+tile.yellow_studiopolis_clapper.name=lemun clap clap
+tile.blue_studiopolis_clapper.name=bloo clap clap
+tile.spring.name=BOing
 
-//tile.scarlet_grass_block.name=<newline>
-//tile.scarlet_grass.name=<newline>
-//tile.scarlet_mushroom.name=<newline>
-//tile.scarlet_orchid.name=<newline>
+tile.scarlet_grass_block.name=scarleet gress bloc
+tile.scarlet_grass.name=scarleet gress
+tile.scarlet_mushroom.name=scarleet mesroom
+tile.scarlet_orchid.name=scarleet flowey
 
 tile.iron_scaffolding.name=irun zcffolding
 tile.purple_bricks.name=parpal brik
-//tile.purple_brick_stairs.name=<newline>
+tile.purple_brick_stairs.name=parpal sterz
 tile.cyan_bricks.name=nyan briks
-//tile.cyan_brick_stairs.name=<newline>
+tile.cyan_brick_stairs.name=nyan sterz
 tile.elder_pebbles.name=old pebbL
 tile.space_matter.name=MARTIAN DIRT OoOoOoO
-//tile.space_obsidian.name=<newline>
+tile.space_obsidian.name=STRONGER MARTIAN DIRT OoOoOoOiEr
 
-//tile.blue_puyo.name=<newline>
-//tile.turquoise_puyo.name=<newline>
-//tile.green_puyo.name=<newline>
-//tile.yellow_puyo.name=<newline>
-//tile.red_puyo.name=<newline>
-//tile.purple_puyo.name=<newline>
-//tile.garbage_puyo.name=<newline>
-//tile.point_puyo.name=<newline>
-//tile.hard_puyo.name=<newline>
-//tile.iron_puyo.name=<newline>
-//tile.puyo_block.name=<newline>
+tile.blue_puyo.name=sed
+tile.turquoise_puyo.name=wut??
+tile.green_puyo.name=neutreel
+tile.yellow_puyo.name=happe :D
+tile.red_puyo.name=ANGERYYYYYYYYYYYYYYYYY
+tile.purple_puyo.name=what you want from mee
+tile.garbage_puyo.name=pure garbeg
+tile.point_puyo.name=pure pint
+tile.hard_puyo.name=My puyo hard
+tile.iron_puyo.name=ALIEEEEEEEN AHHHHHHH
+tile.puyo_block.name=it's a hecking ston lol
 
-tile.rewind_block.name=Dat's hawt
+tile.rewind_block.name=aww dat'z hawt
 tile.koretato_block.name=Koretato blok
 
 --- ITEMS ---
@@ -173,9 +173,9 @@ item.bandage.name=banaj
 item.wheat_flour.name=wet floor
 item.caramel_cube.name=tiny caraml boii
 item.crepe.name=creeepe
-item.chocolate_crepe.name=crepe + choco
-item.caramel_crepe.name=crepe + caraml good
-item.candy_cane.name=christmas cane
+item.chocolate_crepe.name=creeepe + choco
+item.caramel_crepe.name=creeepe + caraml good
+item.candy_cane.name=chrostmess cen yum
 item.burger.name=burug
 item.tomato.name=tomto
 item.salad.name=sld
@@ -192,12 +192,12 @@ item.blue_coin.name=blu cooin
 
 item.smash_ball.name=sm4sh bol
 
-item.annoying_dog.name=horrible entity
+item.annoying_dog.name=one biggy bork boi
 
-item.record_blank.name=EMPTY DISC
-item.record.champions_road.desc=Super Mario 3D World - Champion's Road
-item.record.fly_octo_fly.desc=Splatoon 2 - Fly Octo Fly
-item.record.vampire_killer.desc=Castlevania Judgement - Vampire Killer
+item.record_blank.name=disc of nothin
+item.record.champions_road.desc=Souper Mareo 3D Wurld - Wiener roed
+item.record.fly_octo_fly.desc=Spoon 2 - Birp octopuz birp
+item.record.vampire_killer.desc=Sp0kyvani - Vamp Sleye!!
 
 item.record.nb_sweden.desc=C418 - Sweden (NoteBlock Remix)
 item.record.nb_buoy_base_galaxy.desc=Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)
@@ -212,33 +212,33 @@ item.cappy.name=capy da hat
 item.luigi_cap.name=looigi hat
 item.wario_cap.name=wori hat
 item.waluigi_cap.name=walogi hat
-item.vanish_cap.name=vanis hat
-item.wing_cap.name=fly hat
+item.vanish_cap.name=gon hat
+item.wing_cap.name=birp wingg hat
 item.gooigi_cap.name=googy hat
 item.princess_peach_crown.name=peech cron
 item.princess_daisy_crown.name=disi  cron
-item.rosalina_crown.name=rolina con
+item.rosalina_crown.name=rolina corn
 item.pink_gold_peach_crown.name=pingol peech cron
 item.super_crown.name=waifu creator
 item.broque_monsieur_head.name=HELPEEEZ MOIIII SIVOULPAI
 
 item.bandana.name=banana
 
-//item.snorlax_hat.name=<newline>
+item.snorlax_hat.name=sleepy boi
 
 item.top_hat.name=topattopat
 
-item.ralsei_hat.name=ralzi at
-//item.king_round_mask.name=<newline>
+item.ralsei_hat.name=floofy boi het
+item.king_round_mask.name=they see me doggin', they maskin'
 
-//item.baldi_head.name=<newline>
+item.baldi_head.name=besicz and hed
 
 item.mayro_cap.name=Mayro hat
 item.noteblock_head.name=NoteBlock hed
 
 --- ENTITIES ---
-entity.toad.name=tod
-entity.chincho.name=tostarenan mummy
+entity.toad.name=b u p
+entity.chincho.name=sand mummee
 
 --- SUBTITLES ---
 subtitles.block.question_block.loot.super_mushroom=BLOCO ???? drop supa mush
@@ -247,7 +247,7 @@ subtitles.item.cape_feather.use=cap that makes you high jumped was actully used!
 subtitles.item.smash_ball.use=sm4sh bol uzd
 subtitles.entity.toad.ambient=tod bups
 subtitles.entity.toad.hurt=todtod oofs
-subtitles.entity.toad.death=tod ded
+subtitles.entity.toad.death=tod ded :(
 
 --- ADVANCEMENTS ---
 advancements.mubble.root.title=Mubble
@@ -267,4 +267,4 @@ advancements.mubble.get_tetris_block.description=tirtris bloks fun
 
 --- COMMANDS ---
 commands.motion.usage=/motion <entity> <set|add> [dX] [dY] [dZ]
-//commands.motion.success=<newline>
+commands.motion.success=congratz, /motion workedd
