--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -30,22 +30,22 @@ tile.salad.name=Salat
 tile.cheese_block.name=Käseblock
 tile.unstable_stone.name=Instabiler Stein
 tile.ultimatum_portal.name=Ultimatum-Portal
-//tile.blue_balloon.name=<newline>
-//tile.light_blue_balloon.name=<newline>
-//tile.cyan_balloon.name=<newline>
-//tile.green_balloon.name=<newline>
-//tile.lime_balloon.name=<newline>
-//tile.yellow_balloon.name=<newline>
-//tile.orange_balloon.name=<newline>
-//tile.red_balloon.name=<newline>
-//tile.pink_balloon.name=<newline>
-//tile.magenta_balloon.name=<newline>
-//tile.purple_balloon.name=<newline>
-//tile.brown_balloon.name=<newline>
-//tile.white_balloon.name=<newline>
-//tile.light_gray_balloon.name=<newline>
-//tile.gray_balloon.name=<newline>
-//tile.black_balloon.name=<newline>
+tile.blue_balloon.name=Blauer Luftballon
+tile.light_blue_balloon.name=Hellblauer Luftballon
+tile.cyan_balloon.name=Türkiser Luftballon
+tile.green_balloon.name=Grüner Luftballon
+tile.lime_balloon.name=Hellgrüner Luftballon
+tile.yellow_balloon.name=Gelber Luftballon
+tile.orange_balloon.name=Oranger Luftballon
+tile.red_balloon.name=Roter Luftballon
+tile.pink_balloon.name=Rosa Luftballon
+tile.magenta_balloon.name=Magenta Luftballon
+tile.purple_balloon.name=Violetter Luftballon
+tile.brown_balloon.name=Bauner Luftballon
+tile.white_balloon.name=Weißer Luftballon
+tile.light_gray_balloon.name=Hellgrauer Luftballon
+tile.gray_balloon.name=Grauer Luftballon
+tile.black_balloon.name=Schwarzer Luftballon
 
 tile.question_block.name=? Block
 tile.empty_block.name=Leerer Block
