--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -243,8 +243,18 @@ entity.chincho.name=Chincho
 --- SUBTITLES ---
 subtitles.block.question_block.loot.power_up=? Block drops power up
 subtitles.block.question_block.loot.coin=? Block drops coin
+subtitles.block.note_block.jump=Note Block used
+subtitles.block.rewind_block.disappear=Rewind Block disappeared
+subtitles.block.rewind_block.reappear=Rewind Block reappeared
+subtitles.item.annoying_dog.disappear=Annoying Dog disappeared
+subtitles.item.annoying_dog.waf=Annoying Dog barked
 subtitles.item.cape_feather.use=Cape Feather used
 subtitles.item.smash_ball.use=Smash Ball used
+subtitles.costume.cappy.ambient=Cappy mumbles
+subtitles.costume.cappy.ambient.nether=Cappy running out of steam
+subtitles.costume.cappy.equip=Cappy got on someone's head
+subtitles.costume.cappy.happy=Cappy enjoingly mumbles
+subtitles.costume.cappy.help=Cappy asks for help
 subtitles.entity.toad.ambient=Toad mumbles
 subtitles.entity.toad.hurt=Toad hurts
 subtitles.entity.toad.death=Toad dies
