--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -243,8 +243,19 @@ entity.chincho.name=Chincho
 --- SUBTITLES ---
 subtitles.block.question_block.loot.super_mushroom=Bloque ? suelta un súper champiñón
 subtitles.block.question_block.loot.coin=Bloque ? suelta una moneda
+//subtitles.block.note_block.jump=<newline>
+//subtitles.block.rewind_block.disappear=<newline>
+//subtitles.block.rewind_block.reappear=<newline>
+//subtitles.item.annoying_dog.disappear=<newline>
+//subtitles.item.annoying_dog.waf=<newline>
 subtitles.item.cape_feather.use=Pluma utilizada
 subtitles.item.smash_ball.use=Bola de Smash utilizada
+//subtitles.costume.cappy.ambient=<newline>
+//subtitles.costume.cappy.ambient.nether=<newline>
+//subtitles.costume.cappy.equip=<newline>
+//subtitles.costume.cappy.happy=<newline>
+//subtitles.costume.cappy.help=<newline>
+//subtitles.costume.cappy.help.water=<newline>
 subtitles.entity.toad.ambient=Toad balbucea
 subtitles.entity.toad.hurt=Toad herido
 subtitles.entity.toad.death=Toad muere
