--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -243,8 +243,19 @@ entity.chincho.name=chienchau
 --- SUBTITLES ---
 subtitles.block.question_block.loot.super_mushroom=cool champi sorti ? blok
 subtitles.block.question_block.loot.coin=fric sorti ? bloc
+//subtitles.block.note_block.jump=<newline>
+//subtitles.block.rewind_block.disappear=<newline>
+//subtitles.block.rewind_block.reappear=<newline>
+//subtitles.item.annoying_dog.disappear=<newline>
+//subtitles.item.annoying_dog.waf=<newline>
 subtitles.item.cape_feather.use=plum sauper so qq a utiliser sa
 subtitles.item.smash_ball.use=ball mach qq la utilise
+//subtitles.costume.cappy.ambient=<newline>
+//subtitles.costume.cappy.ambient.nether=<newline>
+//subtitles.costume.cappy.equip=<newline>
+//subtitles.costume.cappy.happy=<newline>
+//subtitles.costume.cappy.help=<newline>
+//subtitles.costume.cappy.help.water=<newline>
 subtitles.entity.toad.ambient=tod chucoht
 subtitles.entity.toad.hurt=toad a mal
 subtitles.entity.toad.death=toad a trai mal
