--- a/resources/assets/mubble/lang/zh_tw.lang
+++ b/resources/assets/mubble/lang/zh_tw.lang
@@ -243,8 +243,19 @@ entity.chincho.name=欽喬
 --- SUBTITLES ---
 subtitles.block.question_block.loot.power_up=問號塊:掉落超級蘑菇
 subtitles.block.question_block.loot.coin=問號塊:掉落硬幣
+//subtitles.block.note_block.jump=<newline>
+//subtitles.block.rewind_block.disappear=<newline>
+//subtitles.block.rewind_block.reappear=<newline>
+//subtitles.item.annoying_dog.disappear=<newline>
+//subtitles.item.annoying_dog.waf=<newline>
 subtitles.item.cape_feather.use=披風羽毛:被使用
 subtitles.item.smash_ball.use=粉碎球:被使用
+//subtitles.costume.cappy.ambient=<newline>
+//subtitles.costume.cappy.ambient.nether=<newline>
+//subtitles.costume.cappy.equip=<newline>
+//subtitles.costume.cappy.happy=<newline>
+//subtitles.costume.cappy.help=<newline>
+//subtitles.costume.cappy.help.water=<newline>
 subtitles.entity.toad.ambient=奇諾比奧:咕噥
 subtitles.entity.toad.hurt=奇諾比奧:受傷
 subtitles.entity.toad.death=奇諾比奧:死亡
