--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -243,8 +243,19 @@ entity.chincho.name=Chincho
 --- SUBTITLES ---
 subtitles.block.question_block.loot.power_up=? Block gibt Power-Up
 subtitles.block.question_block.loot.coin=? Block gibt Münze
+//subtitles.block.note_block.jump=<newline>
+//subtitles.block.rewind_block.disappear=<newline>
+//subtitles.block.rewind_block.reappear=<newline>
+//subtitles.item.annoying_dog.disappear=<newline>
+//subtitles.item.annoying_dog.waf=<newline>
 subtitles.item.cape_feather.use=Federmütze benutzt
 subtitles.item.smash_ball.use=Smash Ball benutzt
+//subtitles.costume.cappy.ambient=<newline>
+//subtitles.costume.cappy.ambient.nether=<newline>
+//subtitles.costume.cappy.equip=<newline>
+//subtitles.costume.cappy.happy=<newline>
+//subtitles.costume.cappy.help=<newline>
+//subtitles.costume.cappy.help.water=<newline>
 subtitles.entity.toad.ambient=Toad murmelt
 subtitles.entity.toad.hurt=Toad verletzt
 subtitles.entity.toad.death=Toad stirbt
