--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -243,8 +243,19 @@ entity.chincho.name=oɥɔuᴉɥƆ
 --- SUBTITLES ---
 subtitles.block.question_block.loot.super_mushroom=ɯooɹɥsnɯ ɹǝdns sdoɹp ʞɔolᗺ ¿
 subtitles.block.question_block.loot.coin=uᴉoɔ sdoɹp ʞɔolᗺ ¿
+//subtitles.block.note_block.jump=<newline>
+//subtitles.block.rewind_block.disappear=<newline>
+//subtitles.block.rewind_block.reappear=<newline>
+//subtitles.item.annoying_dog.disappear=<newline>
+//subtitles.item.annoying_dog.waf=<newline>
 subtitles.item.cape_feather.use=pǝsn ɹǝɥʇɐǝℲ ǝdɐƆ
 subtitles.item.smash_ball.use=pǝsn llɐᗺ ɥsɐɯS
+//subtitles.costume.cappy.ambient=<newline>
+//subtitles.costume.cappy.ambient.nether=<newline>
+//subtitles.costume.cappy.equip=<newline>
+//subtitles.costume.cappy.happy=<newline>
+//subtitles.costume.cappy.help=<newline>
+//subtitles.costume.cappy.help.water=<newline>
 subtitles.entity.toad.ambient=sǝlqɯnɯ pɐo┴
 subtitles.entity.toad.hurt=sʇɹnɥ pɐo┴
 subtitles.entity.toad.death=sǝᴉp pɐo┴
