--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -11,20 +11,20 @@ tile.red_brick_stairs.name=bloo birk sters
 tile.white_bricks.name=cool brik
 tile.white_brick_stairs.name=cool brik sters
 tile.blunite.name=moon-a-bloc
-tile.blunite_stairs.name=a ster
-tile.blunite_wall.name=a woll
+tile.blunite_stairs.name=moon-a-ster
+tile.blunite_wall.name=moon-a-woll
 tile.polished_blunite.name=pretteh monnbloc
 tile.polished_blunite_stairs.name=pretteh monnbloc sters
 tile.carbonite.name=blac stoneh
-tile.carbonite_stairs.name=blac sters
-tile.carbonite_wall.name=blac woll
+tile.carbonite_stairs.name=blac stoneh sters
+tile.carbonite_wall.name=blac stoneh woll
 tile.polished_carbonite.name=pretteh blac ston
 tile.polished_carbonite_stairs.name=pretteh blac sters
 tile.footblock.name=SOCCEEEbloc
-tile.white_cloud_block.name=woah itz white
-tile.light_gray_cloud_block.name=woah itz less white
-tile.gray_cloud_block.name=woah itz lesser white
-tile.black_cloud_block.name=woah itz 0% white
+tile.white_cloud_block.name=clou itz white
+tile.light_gray_cloud_block.name=clou itz less white
+tile.gray_cloud_block.name=clou itz lesser white
+tile.black_cloud_block.name=clou itz 0% white
 tile.tomato.name=redd fud
 tile.salad.name=green fud
 tile.cheese_block.name=cheezy bloc
@@ -64,16 +64,16 @@ tile.blue_mushroom.name=bloosroom
 tile.light_blue_mushroom.name=legit bloosroom
 tile.cyan_mushroom.name=super cyansroom
 tile.green_mushroom.name=grensroom
-tile.lime_mushroom.name=not lemun mesroom
+tile.lime_mushroom.name=not lemun mesoom
 tile.yellow_mushroom.name=lemun mesroom
-tile.orange_mushroom.name=oreng mesroom
+tile.orange_mushroom.name=oreng mesrom
 tile.pink_mushroom.name=pinkysroom
 tile.magenta_mushroom.name=megentesroom
 tile.purple_mushroom.name=burple mesroom
-tile.white_mushroom.name=should i kep doin the wot jokesroom
-tile.light_gray_mushroom.name=i stopped the less wot jokesroom
-tile.gray_mushroom.name=also the lesser wot jokesroom
-tile.black_mushroom.name=this is a normal sroom not a 0% wot jokesroom
+tile.white_mushroom.name=whit mesroom
+tile.light_gray_mushroom.name=lig gry mesom
+tile.gray_mushroom.name=gyyyy shoom
+tile.black_mushroom.name=blok mush
 tile.blue_mushroom_block.name=bloo blocroom
 tile.light_blue_mushroom_block.name=legit blocroom
 tile.cyan_mushroom_block.name=super cyan blocroom
@@ -152,17 +152,17 @@ tile.elder_pebbles.name=old pebbL
 tile.space_matter.name=MARTIAN DIRT OoOoOoO
 tile.space_obsidian.name=STRONGER MARTIAN DIRT OoOoOoOiEr
 
-tile.blue_puyo.name=sed
-tile.turquoise_puyo.name=wut??
-tile.green_puyo.name=neutreel
-tile.yellow_puyo.name=happe :D
-tile.red_puyo.name=ANGERYYYYYYYYYYYYYYYYY
-tile.purple_puyo.name=what you want from mee
-tile.garbage_puyo.name=pure garbeg
-tile.point_puyo.name=pure pint
+tile.blue_puyo.name=sed pyo
+tile.turquoise_puyo.name=wut pyo??
+tile.green_puyo.name=neutreel pyo
+tile.yellow_puyo.name=happe pyo :D
+tile.red_puyo.name=ANGERYYYYYYYYYYYYYYYYY PYOOOOOOOOOO
+tile.purple_puyo.name=ur borin tis pyo
+tile.garbage_puyo.name=pure garbeg pyo
+tile.point_puyo.name=pure pint pyo
 tile.hard_puyo.name=My puyo hard
-tile.iron_puyo.name=ALIEEEEEEEN AHHHHHHH
-tile.puyo_block.name=it's a hecking ston lol
+tile.iron_puyo.name=ALIEEEEEEEN PYO AHHHHHHH
+tile.puyo_block.name=it's a pyo ston lol
 
 tile.rewind_block.name=aww dat'z hawt
 tile.koretato_block.name=Koretato blok
@@ -192,12 +192,12 @@ item.blue_coin.name=blu cooin
 
 item.smash_ball.name=sm4sh bol
 
-item.annoying_dog.name=one biggy bork boi
+item.annoying_dog.name=horrible entity
 
 item.record_blank.name=disc of nothin
-item.record.champions_road.desc=Souper Mareo 3D Wurld - Wiener roed
-item.record.fly_octo_fly.desc=Spoon 2 - Birp octopuz birp
-item.record.vampire_killer.desc=Sp0kyvani - Vamp Sleye!!
+item.record.champions_road.desc=Super Mario 3D World - Champion's Road
+item.record.fly_octo_fly.desc=Splatoon 2 - Fly Octo Fly
+item.record.vampire_killer.desc=Castlevania Judgement - Vampire Killer
 
 item.record.nb_sweden.desc=C418 - Sweden (NoteBlock Remix)
 item.record.nb_buoy_base_galaxy.desc=Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)
@@ -212,12 +212,12 @@ item.cappy.name=capy da hat
 item.luigi_cap.name=looigi hat
 item.wario_cap.name=wori hat
 item.waluigi_cap.name=walogi hat
-item.vanish_cap.name=gon hat
-item.wing_cap.name=birp wingg hat
+item.vanish_cap.name=vanis hat
+item.wing_cap.name=fly hat
 item.gooigi_cap.name=googy hat
 item.princess_peach_crown.name=peech cron
 item.princess_daisy_crown.name=disi  cron
-item.rosalina_crown.name=rolina corn
+item.rosalina_crown.name=rolina con
 item.pink_gold_peach_crown.name=pingol peech cron
 item.super_crown.name=waifu creator
 item.broque_monsieur_head.name=HELPEEEZ MOIIII SIVOULPAI
@@ -228,17 +228,17 @@ item.snorlax_hat.name=sleepy boi
 
 item.top_hat.name=topattopat
 
-item.ralsei_hat.name=floofy boi het
-item.king_round_mask.name=they see me doggin', they maskin'
+item.ralsei_hat.name=flooff ralzi at
+item.king_round_mask.name=round demon mask creepi hooo
 
-item.baldi_head.name=besicz and hed
+item.baldi_head.name=besicz hed
 
 item.mayro_cap.name=Mayro hat
 item.noteblock_head.name=NoteBlock hed
 
 --- ENTITIES ---
-entity.toad.name=b u p
-entity.chincho.name=sand mummee
+entity.toad.name=tod
+entity.chincho.name=tostarenan mummy
 
 --- SUBTITLES ---
 subtitles.block.question_block.loot.super_mushroom=BLOCO ???? drop supa mush
@@ -257,7 +257,7 @@ subtitles.item.smash_ball.use=sm4sh bol uzd
 //subtitles.costume.cappy.help=<newline>
 subtitles.entity.toad.ambient=tod bups
 subtitles.entity.toad.hurt=todtod oofs
-subtitles.entity.toad.death=tod ded :(
+subtitles.entity.toad.death=tod ded
 
 --- ADVANCEMENTS ---
 advancements.mubble.root.title=Mubble
@@ -277,4 +277,4 @@ advancements.mubble.get_tetris_block.description=tirtris bloks fun
 
 --- COMMANDS ---
 commands.motion.usage=/motion <entity> <set|add> [dX] [dY] [dZ]
-commands.motion.success=congratz, /motion workedd
+commands.motion.success=teh vilicity of %s hv been change to %s %s %s omg gg
