--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -152,17 +152,17 @@ tile.elder_pebbles.name=Elder Pebbles
 tile.space_matter.name=Space Matter
 //tile.space_obsidian.name=<newline>
 
-//tile.blue_puyo.name=<newline>
-//tile.turquoise_puyo.name=<newline>
-//tile.green_puyo.name=<newline>
-//tile.yellow_puyo.name=<newline>
-//tile.red_puyo.name=<newline>
-//tile.purple_puyo.name=<newline>
-//tile.garbage_puyo.name=<newline>
-//tile.point_puyo.name=<newline>
-//tile.hard_puyo.name=<newline>
-//tile.iron_puyo.name=<newline>
-//tile.puyo_block.name=<newline>
+tile.blue_puyo.name=Blauer Puyo
+tile.turquoise_puyo.name=Türkiser Puyo
+tile.green_puyo.name=Grüner Puyo
+tile.yellow_puyo.name=Gelber Puyo
+tile.red_puyo.name=Roter Puyo
+tile.purple_puyo.name=Violetter Puyo
+tile.garbage_puyo.name=Müll-Puyo
+tile.point_puyo.name=Punkte-Puyo
+tile.hard_puyo.name=Harter Puyo
+tile.iron_puyo.name=Eisen-Puyo
+tile.puyo_block.name=Puyo-Block
 
 tile.rewind_block.name=Rückspul-Block
 tile.koretato_block.name=Koretato-Block
