--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -229,7 +229,7 @@ item.snorlax_hat.name=Snorlax hoed
 item.top_hat.name=Hoge hoed
 
 item.ralsei_hat.name=Ralsei's hoed
-item.king_round_mask.name=Koning rond's masker
+item.king_round_mask.name=Koning rond masker
 
 item.baldi_head.name=Baldi's hoofd
 
