--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -244,10 +244,10 @@ entity.chincho.name=Chincho
 subtitles.block.question_block.loot.power_up=? Block drops power up
 subtitles.block.question_block.loot.coin=? Block drops coin
 subtitles.block.note_block.jump=Note Block used
-subtitles.block.rewind_block.disappear=Rewind Block disappeared
-subtitles.block.rewind_block.reappear=Rewind Block reappeared
-subtitles.item.annoying_dog.disappear=Annoying Dog disappeared
-subtitles.item.annoying_dog.waf=Annoying Dog barked
+subtitles.block.rewind_block.disappear=Rewind Block disappears
+subtitles.block.rewind_block.reappear=Rewind Block reappears
+subtitles.item.annoying_dog.disappear=Annoying Dog disappears
+subtitles.item.annoying_dog.waf=Annoying Dog barks
 subtitles.item.cape_feather.use=Cape Feather used
 subtitles.item.smash_ball.use=Smash Ball used
 subtitles.costume.cappy.ambient=Cappy mumbles
