--- a/src/main/resources/assets/mubble/lang/en_ud.lang
+++ b/src/main/resources/assets/mubble/lang/en_ud.lang
@@ -180,6 +180,7 @@ item.candy_cane.name=ǝuɐƆ ʎpuɐƆ
 //item.tomato.name=<newline>
 //item.salad.name=<newline>
 //item.cheese.name=<newline>
+//item.totem_of_ascending.name=<newline>
 
 item.super_mushroom.name=ɯooɹɥsnW ɹǝdnS
 item.peach.name=ɥɔɐǝԀ
