--- a/src/main/resources/assets/mubble/lang/en_us.lang
+++ b/src/main/resources/assets/mubble/lang/en_us.lang
@@ -180,6 +180,7 @@ item.burger.name=Burger
 item.tomato.name=Tomato
 item.salad.name=Salad
 item.cheese.name=Cheese
+item.totem_of_ascending.name=Totem of Ascending
 
 item.super_mushroom.name=Super Mushroom
 item.peach.name=Peach
