--- a/src/main/resources/assets/mubble/lang/lol_us.lang
+++ b/src/main/resources/assets/mubble/lang/lol_us.lang
@@ -180,6 +180,7 @@ item.burger.name=burug
 item.tomato.name=tomto
 item.salad.name=sld
 item.cheese.name=CHEEZ
+//item.totem_of_ascending.name=<newline>
 
 item.super_mushroom.name=SUPA MUSH
 item.peach.name=salty peesh very gud
