--- a/src/main/resources/assets/mubble/lang/zh_tw.lang
+++ b/src/main/resources/assets/mubble/lang/zh_tw.lang
@@ -180,6 +180,7 @@ item.candy_cane.name=拐杖糖
 //item.tomato.name=<newline>
 //item.salad.name=<newline>
 //item.cheese.name=<newline>
+//item.totem_of_ascending.name=<newline>
 
 item.super_mushroom.name=超級蘑菇
 item.peach.name=桃子
