--- a/src/main/resources/assets/mubble/lang/en_gb.lang
+++ b/src/main/resources/assets/mubble/lang/en_gb.lang
@@ -180,6 +180,7 @@ item.burger.name=Burger
 //item.tomato.name=<newline>
 //item.salad.name=<newline>
 //item.cheese.name=<newline>
+//item.totem_of_ascending.name=<newline>
 
 item.super_mushroom.name=Super Mushroom
 item.peach.name=Peach
