--- a/src/main/resources/assets/mubble/lang/fr_fe.lang
+++ b/src/main/resources/assets/mubble/lang/fr_fe.lang
@@ -180,6 +180,7 @@ item.burger.name=borgor
 //item.tomato.name=<newline>
 //item.salad.name=<newline>
 //item.cheese.name=<newline>
+//item.totem_of_ascending.name=<newline>
 
 item.super_mushroom.name=coul champignon
 item.peach.name=g la paich!! ahaha
