--- a/src/main/resources/assets/mubble/lang/nl_nl.lang
+++ b/src/main/resources/assets/mubble/lang/nl_nl.lang
@@ -180,7 +180,7 @@ item.burger.name=Burger
 item.tomato.name=Tomaat
 item.salad.name=Salade
 item.cheese.name=Kaas
-//item.totem_of_ascending.name=<newline>
+item.totem_of_ascending.name=Totem der opstijging
 
 item.super_mushroom.name=Super paddenstoel
 item.peach.name=Perzik
